--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="#">
-              <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
-          </li>
-          <li><a href="#">About</a></li>
+          <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+          <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>About</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                          Menu <span class="caret"></span></a>
