--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-          <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>About</a></li>
+          <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                         Menu <span class="caret"></span></a>
+                         <span class="glyphicon glyphicon-list-alt"></span>Menu <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Appetizers</a></li>
               <li><a href="#">Main Courses</a></li>
@@ -52,7 +52,7 @@
               <li><a href="#">Weekend Brunch</a></li>
             </ul>
           </li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contactus.html"><span class="fa fa-envelope-o"></span> Contact</a></li>;
         </ul>
       </div>
     </div>
